--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="cntTxt">
                 <p>Animación 1</p>
                 <P>Representación de una estadística sistólica de medición arterial. <br><br> Se utilizan elementos como
-                    <code> text, rect, line, polyline,</code> los cuales se animan con las propiedades <span>stroke-dashoffset, filter </span>y la posición <span>y</span> para transicionar los pntos de lectura en la grafica de forma vertical
+                    <code> text, rect, line, polyline,</code> los cuales se animan con las propiedades <span>stroke-dashoffset, filter </span>y la posición <span>y</span> para transicionar los puntos de lectura en la gráfica de forma vertical.
                 </P>
             </div>
             <div class="cntSvg">
