Modificación caratula, se agrega nombre de asesor

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="cntMenu">
         <div class="cntImg"><img src="./Unir.png" alt="unir"></div>
         <nav>
-            <a href="#presentacion">Grupo 1010-C </a>
+            <a href="#presentacion">Actividada 2</a>
             <a href="#animacion1">Animación 1</a>
             <a href="#animacion2">Animación 2</a>
             <a href="#animacion3">Animación 3</a>
@@ -34,7 +34,8 @@
         <div id="presentacion" class="cntAnima">
             <h2>Maestria. Diseño de Interfaces Web / 1er. Semestre / Actividad grupal</h2>
             <h2>Desarrollo de Recursos Animados para Web</h2>
-            <p>Integrantes</p>
+            <h2>Mtro. Nestor Alejandro Arredondo Díaz</h2>
+            <p>Integrantes Grupo 1010-C</p>
             <ul>
                 <li>Andrea Estefania Castellanos Suarez</li>
                 <li>Diana Liliana Baltazar Resendiz</li>
@@ -80,7 +81,7 @@
                     <!-- presion arterial -->
 
                   
-                    <g transform="translate(-30), ">
+                    <g transform="translate(-30)">
                         <!-- ejes sistolica-->
 
                         <line x1="80" y1="320" x2="80" y2="420" stroke="#f1EFEC" stroke-width="2"
