--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
     <!-- Contenedor para posicion fixed en menu -->
-    <div class="cntMenu">
+     <img id="menuAbrir" src="./menu.svg" alt="boton menu">
+     <div class="cntMenu">
+         <img id="menuCerrar" src="./cerrar.svg" alt="boton menu">
+        
         <div class="cntImg"><img src="./Unir.png" alt="unir"></div>
         <nav>
             <a href="#presentacion">Actividada 2</a>
@@ -201,7 +204,7 @@
 
     </div>
 
-
+    <script src="./main.js"></script>
 </body>
 
 </html>
