ajuste de centrado en contenedor de presentacion en @medias

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         <!-- Caratula -->
         <div id="presentacion" class="cntAnima">
+            <img class="u" src="./UdeUnir.png" alt="">
             <h2>Maestria. Diseño de Interfaces Web / 1er. Semestre / Actividad grupal</h2>
             <h2>Desarrollo de Recursos Animados para Web</h2>
             <h2>Mtro. Nestor Alejandro Arredondo Díaz</h2>
