--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="cntCode">
                 <p>Código CSS (fragmento)</p>
                 <code>
-     /* Trancisiona los puntos con delay de 0.1 segundos de forma infinita 
+     /* Transiciona los puntos con delay de 0.1 segundos de forma infinita 
     en un tiempo de 5 segundos */ <br><br>
     .puntosPA1  {animation: puntosPAuno 5s ease 0.1s infinite;}<br>
     .puntosPA2  {animation: puntosPAdos 5s ease 0.2s infinite;}<br>
