se agrego la animacion 404 y otros detalles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#animacion3">Animación 3</a>
             <a href="#animacion4">Animación 4</a>
             <a href="#animacion5">Animación 5</a>
-            <a href="#notfound">not found</a>
+            <a href="./404.html">Not found</a>
             <a href="#conclusiones">Conclusiones</a>
             </nav>
         </div>
