--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Integrantes Grupo 1010-C</p>
             <ul>
                 <li>Andrea Estefania Castellanos Suarez</li>
-                <li>Diana Liliana Baltazar Resendiz</li>
+                <li>Diana Lilia Baltazar Reséndiz</li>
                 <li>Mario Alfredo Diaz Mendez</li>
                 <li>Milton Herrera Oropeza</li>
             </ul>
@@ -410,7 +410,7 @@
                 <P>Gatito en bucle es una animación SVG interactiva, diseñada para acompañar procesos de carga o agregar dinamismo visual a interfaces web. 
                     La animación cobra vida al interactuar con el cursor: al pasar el mouse sobre ella (hover), el gatito inicia una secuencia de movimiento fluido
                     <br/>Técnicas utilizadas: Animación de trazos con <span>stroke-dashes</span>. Movimiento circular mediante transformaciones <span>rotate</span> 
-                    y curas de aceleración suaves como <span>ease-out y base-in-sine</span><br/>
+                    y curvas de aceleración suaves como <span>ease-out y base-in-sine</span><br/>
                 </P>
             </div>
 
