--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8" />
     <title>Actividad 3 Grupal</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Hind:wght@300;400;500;600;700&family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-          <link rel="stylesheet" href="styles.css">
+          <link rel="stylesheet" href="css/styles.css">
 </head>
-    <body class="p-4">
-        <div class="container">
+    <body class="p-0 d-flex vw-100 vh-100 justify-content-center align-items-center bg-gradient-danger">
+        <main class="d-flex flex-column w-70 h-70 bg-light w-50 rounded-5 p-5">
             <h2 class="mb-4">Formulario de Registro</h2>
-            <div>Intentos Exitosos: <span id="iSuccess">0</span></div>
-            <div>Intentos Fallidos: <span id="iFail">0</span></div>
+            <div class="mb-3">
+                <p class="text-body fs-6">
+                    Intentos Exitosos: <span class="text-success" id="iSuccess">0</span>
+                </p>
+                <p class="text-body fs-6">
+                    Intentos Fallidos: <span class="text-danger" id="iFail">0</span>
+                </p>
+            </div>           
             <form id="registroForm" action="#">
                 <!-- Cadena -->
                 <div class="mb-3">
@@ -54,11 +63,12 @@
                 </div>
 
                 <!-- Botones -->
+                
+                <button type="button" class="btn btn-light" id="resetBtn">Limpiar</button>
                 <button type="button" class="btn btn-primary" id="btnRegistrar" disabled="disabled">Registrar</button>
-                <button type="button" class="btn btn-secondary" id="resetBtn">Limpiar</button>
             </form>
 
-        </div>
+        </main>
     </body>
 
     <script src="js/formValidator.js"></script>
