Ajustes visuales para el formulario y animaciones

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    </head>
    <body class="p-0 d-flex vw-100 min-vh-100 justify-content-center align-items-center bg-gradient-danger p-5">
       <main class="bg-light d-flex flex-column my-auto p-5 rounded-5 w-75">
-         <h2 class="fs-1 mb-4 text-center">Formulario de Registro</h2>
+         <h1 class="fs-1 mb-4 text-center">Formulario de Registro</h1>
          <div class="d-flex flex-column mb-3 text-end">
             <p class="fs-6 mb-0 text-success">
                Intentos Exitosos: <span id="iSuccess" class="text-success">0</span>
@@ -25,17 +25,17 @@
             <!-- Cadena -->
             <div class="mb-4">
                <label for="nombre" class="form-label fs-4 mb-0 text-dark">Nombre</label>
-               <input type="text" id="nombre" class="border-dark form-control" required>
+               <input type="text" id="nombre" class="border-dark form-control" placeholder="Ingresa tu nombre completo..." required>
             </div>
             <!-- Cadena -->
             <div class="mb-4">
                <label for="email" class="form-label fs-4 mb-0 text-dark">Correo Electrónico</label>
-               <input type="email" id="email" class="border-dark form-control" required>
+               <input type="email" id="email" class="border-dark form-control" placeholder="ejemplo@correo.com" required>
             </div>
             <!-- Numérico -->
             <div class="mb-4">
                <label for="edad" class="form-label fs-4 mb-0 text-dark">Edad</label>
-               <input type="number" id="edad" class="border-dark form-control" required>
+               <input type="number" id="edad" class="border-dark form-control" placeholder="¿Cuántos años tienes?" required>
             </div>
             <!-- Fecha -->
             <div class="mb-4">
